--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "npm run prepare",
     "test": "tsc --noEmit",
     "prepare": "rm -rf lib/ && tsc",
-    "preversion": "npm run test"
+    "preversion": "npm run test",
+    "docs": "typedoc src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
   "homepage": "https://github.com/tgcallsjs/tgcalls#readme",
   "devDependencies": {
     "@types/node": "^14.14.21",
+    "typedoc": "^0.20.20",
     "typescript": "^4.1.3"
   },
   "dependencies": {
