--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "url": "git+https://github.com/tgcallsjs/tgcalls.git"
   },
   "author": "Andrew Lane <contact@lungers.com>",
-  "license": "MIT",
+  "license": "LGPL-3.0",
   "bugs": {
     "url": "https://github.com/tgcallsjs/tgcalls/issues"
   },
