Remove the readme from the docs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
         "includeVersion": true,
         "name": "tgcallsjs",
         "out": "docs/",
-        "readme": "README.md"
+        "readme": "none"
     }
 }
